fixed responsive footer style

--- a/src/styles/sections/_footer.sass
+++ b/src/styles/sections/_footer.sass
@@ -2,8 +2,8 @@ footer
   padding: 37px 0
   background: $main
   color: #fff
-  @media(max-width: 767px)
-    padding: 37px 0 86px
+  //@media(max-width: 767px)
+  //  padding: 37px 0 86px
 
 .footer
   &_cr
